--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "node": "v14.17.6"
   },
   "scripts": {
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "client": "cd client && npm start",
+    "build": "cd client_side && npm run build",
+    "install-client": "cd client_side && npm install",
+    "client": "cd client_side && npm start",
     "heroku-postbuild": "cd client_side && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
