--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "build": "cd client_side && npm run build",
+    "install-client": "cd client_side && npm install",
+    "client": "cd client_side && npm start",
     "heroku-postbuild": "cd client_side && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
