--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MongoURI=mongodb+srv://saipepu:YF3GTi2stt72WY95@cluster0.dya0c.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://saipepu:YF3GTi2stt72WY95@cluster0.dya0c.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRET=saipepu
 node_modules
